--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                      <img src="assets/img/java.svg" alt="" width="100vw" height="100vw">
                      <img src="assets/img/python.svg" alt="" width="100vw" height="100vw">
                      <img src="assets/img/asm.svg" alt="" width="100vw" height="100vw">
-                     <img src="assets/img/unity.svg" alt="" width="100vw" height="100vw">
+                     <img src="assets/img/Unity.svg" alt="" width="100vw" height="100vw">
                      <img src="assets/img/asp.net.svg" alt="" width="100vw" height="100vw">
                      <img src="assets/img/css.svg" alt="" width="100vw" height="100vw">
                      <img src="assets/img/html.svg" alt="" width="100vw" height="100vw">
